--- a/ClearLayers/manifest.json
+++ b/ClearLayers/manifest.json
@@ -6,12 +6,13 @@
   "version": "2.1",
   "wabVersion": "2.1",
   "author": "Esri R&D Center Beijing",
-  "description": "This is the widget used in developer guide",
+  "description": "",
   "copyright": "",
   "license": "http://www.apache.org/licenses/LICENSE-2.0",
   "properties": {
     "inPanel":false,
     "hasConfig":false,
-    "hasUIFile":false
+    "hasUIFile":false,
+    "supportMultiInstance": false
   }
 }
